--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -60,18 +60,19 @@ body {
 }
 
 .lien-button-cta {
-	width: 20rem;
-	font-weight: 400;
-	font-size: 1.1rem;
+	width: 15rem;
+	font-weight: normal;
+	font-size: 1rem;
 	margin-left: 50%;
-	color: $color-white!important;
+	height: 3.5em;
+	color: $color-white !important;
 	border-radius: 40px;
 	text-transform: uppercase;
-	background-color: $color-orange!important;
-	-webkit-transform: translatex(-10rem) !important;
-	-moz-transform: translatex(-10rem) !important;
-	-ms-transform: translatex(-10rem) !important;
-	transform: translatex(-10rem) !important;
+	background-color: $color-orange !important;
+	-webkit-transform: translatex(-7.5rem) !important;
+	-moz-transform: translatex(-7.5rem) !important;
+	-ms-transform: translatex(-7.5rem) !important;
+	transform: translatex(-7.5rem) !important;
 	&:hover {
 		background-color: transparent!important;
 		color: $color-white!important;
@@ -99,10 +100,13 @@ body {
 
 // Default Styles
 .title-big-white {
-	font-family: $font-quaternary;
+	font-family: $font-secondary;
 	font-size: 3.2em;
+	font-weight: normal;
 	color: $color-white;
+	line-height: 1.3em;
 	.extra-big{
+		font-family: $font-quaternary;
 		font-size: 6rem;
 	}
 }
@@ -120,7 +124,7 @@ body {
 		content: '';
 		position: absolute;
 		bottom: 1em;
-		width: 1.85em;
+		width: 1.5em;
 		height: 8px;
 		background-color: $color-orange;
 		top: 1.3em;
@@ -180,8 +184,8 @@ body {
 	float: left;
 	text-align: center;
 	width: 100%;
-	font-family: $font-quaternary;
-	font-weight: 700;
+	font-family: $font-secondary;
+	font-weight: normal;
 	margin-bottom: 1.6em;
 	margin-top: 1.5em;
 	line-height: 1.5em;
@@ -194,7 +198,7 @@ body {
 		position: absolute;
 		bottom: 1em;
 		width: 1.8em;
-		height: 8px;
+		height: 4px;
 		background-color: #FFF;
 		top: 3.5em;
 		float: left;
@@ -206,6 +210,7 @@ body {
 		}
 	}
 	.extra-big{
+		font-family: $font-quaternary;
 		font-size: 4rem;
 	}
 }
@@ -357,20 +362,24 @@ textarea {
 		position: absolute;
 		height: 15em;
 		width: 7em;
-		left: 70.5%;
+		margin-left: -3.5em;
+		left: 70%;
 		bottom: 4em;
 		background-image: url('../../../images/lien-abf-top.svg');
 		background-repeat: no-repeat;
 	}
 	.decoration {
 		position: absolute;
-		height: 25em;
-		width: 25em;
-		left: 63%;
-		top: 25%;
 		@include opacity(0.9);
 		background-image: url('../../../images/lien-logo-white.svg');
 		background-repeat: no-repeat;
+	}
+	.decoration-1{
+		height: 25em;
+		width: 25em;
+		left: 70%;
+		margin-left: -12.5em;
+		top: 25%;
 	}
 	.decoration-2 {
 		height: 60em;
@@ -515,6 +524,7 @@ textarea {
 		color: $color-orange;
 		font-family: $font-secondary;
 		margin-bottom: 2em;
+		font-weight: normal;
 		span{
 			font-family: $font-quaternary;
 		}
@@ -539,15 +549,17 @@ textarea {
 			border: 2px solid $color-dark-gray;
 			@include placeholder($color-orange);
 			text-transform: uppercase;
+			color: $color-orange!important;
 		}
 		button {
 			position: absolute;
-			height: 30px;
-			width: 30px;
+			height: 25px;
+			width: 25px;
 			border: none;
-			top: 1em;
+			top: 1.3em;
 			right: 1.2em;
 			background-image: url('../../../images/lien-btn-filter.svg');
+			background-color: transparent;
 		}
 	}
 	ul {
@@ -583,7 +595,6 @@ textarea {
 				width: 100%;
 				height: 160px;
 			}
-
 			h2 {
 				color: $color-dark-gray;
 				font-size: 2em;
@@ -591,12 +602,10 @@ textarea {
 				margin-bottom: 0.5em;
 				text-align: center;
 			}
-
 			p {
 				color: $color-orange;
 				text-align: center;
 			}
-
 			button {
 				position: relative;
 				height: 2.5rem;
@@ -617,6 +626,29 @@ textarea {
 				-ms-transform: translatex(-5rem) !important;
 				transform: translatex(-5rem) !important;
 				margin-bottom: 3em;
+			}
+		}
+	}
+	.owl-carousel {
+		.owl-dots {
+			margin-top: 1em !important;
+			margin-bottom: 2em;
+			position: absolute;
+			width: 100%;
+			.owl-dot {
+				span {
+					@include transition(0.25s);
+				}
+				&:hover {
+					span {
+						background-color: $color-orange !important;
+					}
+				}
+				&.active {
+					span {
+						background-color: $color-orange !important;
+					}
+				}
 			}
 		}
 	}
@@ -659,7 +691,7 @@ textarea {
 		}
 		input, textarea{
 			background-color: $color-white;
-			color: $color-dark-gray;
+			color: $color-dark-gray!important;
 			&:hover,
 			&:focus {
 				border-left: 4px solid $color-dark-gray;
