--- a/assets/scss/base/includes/menu.scss
+++ b/assets/scss/base/includes/menu.scss
@@ -49,8 +49,8 @@
 		right: 15px;
 		height: 40px;
 	    background: transparent;
-	    border-radius: 0;
-	    border: 2px solid $color-dark-gray;
+	    border-radius: 50%;
+	    border: 2px solid $color-orange;
 		display: block;
 		cursor: pointer;
 		@include responsive(s4) {
